src/objects/QPMS__Asset_Profile_Criteria__c.object
<CustomObject>
    <description>Junction object between Asset Profile  and Criteria</description>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Profile</description>
        <inlineHelpText>Asset Profile</inlineHelpText>
        <label>Asset Profile</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>Asset Profile Criteria</relationshipLabel>
        <relationshipName>Asset_Profile_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <description>Criteria Name</description>
        <inlineHelpText>Criteria Name</inlineHelpText>
        <label>Criteria Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Type__c</fullName>
        <label>Criteria Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Criteria</description>
        <inlineHelpText>Criteria</inlineHelpText>
        <label>Criteria</label>
        <referenceTo>QPMS__Criteria__c</referenceTo>
        <relationshipLabel>Asset Profile Criteria</relationshipLabel>
        <relationshipName>Asset_Profile_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <description>Measurement</description>
        <inlineHelpText>Measurement</inlineHelpText>
        <label>Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Minus__c</fullName>
        <description>Tolerance_Minus</description>
        <inlineHelpText>Tolerance_Minus</inlineHelpText>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance_Plus__c</fullName>
        <description>Tolerance_Plus</description>
        <inlineHelpText>Tolerance_Plus</inlineHelpText>
        <label>Tolerance(+)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>Criteria Record Type</description>
        <formula>QPMS__Criteria__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Criteria Record Type</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <description>Unit Of Measurement</description>
        <inlineHelpText>Unit Of Measurement</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset Profile Criteria</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APC-{0000}</displayFormat>
        <label>Asset Profile Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Profile Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>